# SPELL_Dev_1.4.0_SRC

./: .gitignore  .gitmodules
src/: Makefile.am
src/com.astra.ses.spell.dev/: SPELL-Dev-Configuration.product  SPELL-Dev-Windows-Target_multi_platform.target  plugin.xml
src/com.astra.ses.spell.dev.code_coverage/: .project  plugin.xml
src/com.astra.ses.spell.dev.code_coverage/src/com/astra/ses/spell/code_coverage/: Activator.java  CodeCoverage.java  PasswordUserInfo.java
src/com.astra.ses.spell.dev.code_coverage/src/com/astra/ses/spell/code_coverage/ui/: CodeCoveragePreferenceInitializer.java  CodeCoveragePreferencePage.java  CodeCoveragePreferences.java
src/com.astra.ses.spell.dev.code_coverage/src/com/astra/ses/spell/code_coverage/ui/commands/: ClearCodeCoverageHandler.java  CodeCoverageAnnotation.java  LoadCodeCoverageHandler.java  StartCodeCoverageHandler.java
src/com.astra.ses.spell.dev.config/src/com/astra/ses/spell/dev/config/: ConfigurationManager.java
src/com.astra.ses.spell.dev.database.hifly/: plugin.xml
src/com.astra.ses.spell.dev.database.hifly/src/com/astra/ses/spell/dev/database/hifly/: Activator.java  HiflyDatabaseDriver.java
src/com.astra.ses.spell.dev.database.redis/: .classpath  .project  .project.bak  build.properties  plugin.properties  plugin.xml
src/com.astra.ses.spell.dev.database.redis/dbmodel/: DBModel.genmodel
src/com.astra.ses.spell.dev.database.redis/src/com/astra/ses/spell/dev/database/webapi/: Activator.java  DatabaseConnection.java  TMTCparameterHoverParticipant.java  WebAPIDatabaseConnectionManager.java  WebAPIDatabaseDriver.java
src/com.astra.ses.spell.dev.database.redis/text/: description.txt
src/com.astra.ses.spell.dev.database.scorpio/: .project  plugin.xml
src/com.astra.ses.spell.dev.database.scorpio/src/com/astra/ses/spell/dev/database/scorpio/: Activator.java  ScorpioDatabaseDriver.java
src/com.astra.ses.spell.dev.database.ui/src/com/astra/ses/spell/database/browser/ui/: TelecommandViewDialog.java  TelemetryViewDialog.java
src/com.astra.ses.spell.dev.database/src/com/astra/ses/spell/dev/database/: DatabaseLoadException.java  DatabaseManager.java
src/com.astra.ses.spell.dev.dictionaryeditor/: plugin.xml
src/com.astra.ses.spell.dev.documentation/: build.properties  fragment.xml
src/com.astra.ses.spell.dev.documentation/src/com/astra/ses/spell/dev/commands/: OpenFile.java
src/com.astra.ses.spell.dev.scheck.dictionaries/: .project  fragment.xml
src/com.astra.ses.spell.dev.scheck.functions/: fragment.xml
src/com.astra.ses.spell.dev.scheck.sfpack1/: fragment.xml
src/com.astra.ses.spell.dev.scheck.sfunctions/: fragment.xml
src/com.astra.ses.spell.dev.scheck.ui/: plugin.xml
src/com.astra.ses.spell.dev.scheck/src/com/astra/ses/spell/dev/scheck/: ISemanticCheckProgress.java  QuickFix.java  ResourceManager.java  SemanticsChecker.java  UserLibRegistry.java
src/com.astra.ses.spell.dev.spelleditor/: plugin.xml
src/com.astra.ses.spell.dev.spelleditor/src/com/astra/ses/spell/dev/spelleditor/: SpellEditor.java
src/com.astra.ses.spell.dev/src/com/astra/ses/spell/dev/: Application.java
src/com.astra.ses.spell.dev/src/com/astra/ses/spell/dev/advisor/: ApplicationWorkbenchAdvisor.java  ApplicationWorkbenchWindowAdvisor.java  WorkbenchActionBuilder.java
src/com.astra.ses.spell.dev/src/com/astra/ses/spell/dev/preferences/: CodeFoldingPage.java
src/com.astra.ses.spell.dev/src/com/astra/ses/spell/dev/properties/: WorkspacePropertyTester.java
src/com.astra.ses.spell.dev/src/com/astra/ses/spell/dev/startup/: SetPythonInterpreterCommand.java
src/com.astra.ses.spell.dev/src/com/astra/ses/spell/dev/wizards/: ProcedureSuiteWizard.java  ProcedureWizard.java
src/com.astra.ses.spell.dev/src/com/astra/ses/spell/dev/workspace/: SpellWorkspaceManager.java
src/com.astra.ses.spell.language/: .project  default_constants  default_functions  default_modifiers  plugin.xml
src/com.astra.ses.spell.language/src/com/astra/ses/spell/language/: Parser.java  SpellFixer.java  SpellFormatter.java  SpellProgrammingLanguage.java
src/com.astra.ses.spell.language/src/com/astra/ses/spell/language/beautifier/: AssignParser.java  CallParser.java  CodeBeautifier.java  DictParser.java  KeywordParser.java  ListParser.java  ModuleParser.java  MultilineParser.java  Paragraph.java  ParagraphAligner.java  SpellParser.java  TextParagraph.java
src/com.astra.ses.spell.language/src/com/astra/ses/spell/language/code_completion/: SPELLCodeCompletion.java
src/com.astra.ses.spell.language/src/com/astra/ses/spell/language/dbHover/: SPELLDBHover.java
src/com.astra.ses.spell.language/src/com/astra/ses/spell/language/resolver/: SpellModuleResolver.java
src/com.astra.spell.dev.feature/: .project  feature.xml
(+1071 files in other folders)
